--- a/scss/_bg.scss
+++ b/scss/_bg.scss
@@ -8,6 +8,7 @@ body {
                      auto calc(100% - #{$horizon-y} + #{$page-y-drop});
    background-position-y: top, $horizon-y;
    background-repeat: no-repeat, no-repeat;
+   overflow: hidden;
 }
 
 // body::before {
